implemented restaurants and menu pages

--- a/src/app/members/dashboard/dashboard.page.html
+++ b/src/app/members/dashboard/dashboard.page.html
@@ -6,5 +6,6 @@
 
 <ion-content padding>
   <ion-button (click)="logout()">logout</ion-button>
+  <ion-button href="members/restaurants" routerDirection="forward">restaurants</ion-button>
   <ion-button href="members/profile" routerDirection="forward">profile</ion-button>
 </ion-content>
