--- a/src/app/members/profile/profile.page.html
+++ b/src/app/members/profile/profile.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/login"></ion-back-button>
+      <ion-back-button defaultHref="members/dashboard"></ion-back-button>
     </ion-buttons>
     <ion-title>profile</ion-title>
   </ion-toolbar>
