--- a/src/app/members/profile/profile.page.html
+++ b/src/app/members/profile/profile.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content padding>
-  <div *ngIf="user">
+  <div>
     <h1>Welcome {{user.first}} {{user.last}} </h1>
     <h2>{{user.email}}</h2>
     <h3> {{user.uid}} </h3>
